# bot-b

./: .cursorrules  .gitignore  AGGRESSIVE_PROFIT_STRATEGY.md  ALGORITHM_IMPROVEMENTS.md  ARCHITECTURE.md  BEST_PRACTICES.md  BEST_PRACTICES_CHECKLIST.md  BUSINESS_ANALYSIS_STRUCTURE_PLAN.md  BUSINESS_LOGIC_ANALYSIS.md  CLEANUP_SUMMARY.md  CODE_REVIEW.md  CODE_REVIEW_CHECKLIST.md  CODE_STRUCTURE.md  CRATE_STRUCTURE.md  CRITICAL_ISSUES_ANALYSIS.md  Cargo.toml  DEVELOPMENT_WORKFLOW.md  FINAL_STRUCTURE.md  FIXES_APPLIED.md  HATALAR_RAPORU.md  HFT_OPTIMIZATION_ANALYSIS.md  HISTORY.md  INTELLIGENT_STRATEGY.md  LOG_ANALYSIS.md  MODULE_ANALYSIS.md  MODULE_DOCUMENTATION.md  OPTIMIZATION_PLAN.md  QMEL_IMPLEMENTATION_CHECKLIST.md  README.md  REALISTIC_PROFIT_STRATEGY.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  RL_INTEGRATION_PLAN.md  STRUCTURE_IMPROVEMENTS.md  TESTING_GUIDE.md  TEST_COVERAGE_REPORT.md  TEST_GUIDE.md  TRADING_BOT_ANALYSIS.md  TRENDING_IMPROVEMENTS.md  config.yaml  (+3 more)
.cargo/: config.toml
archive/: check_optimization.sh  optimize.py  optimize.sh  optimize_quick.py  optimize_wide.py
archive/tests/: optimize_strategy.rs
crates/app/: Cargo.toml
crates/app/src/: app_init.rs  balance.rs  binance_exec.rs  binance_rest.rs  binance_ws.rs  cap_manager.rs  config.rs  connection.rs  constants.rs  core.rs  direction_selector.rs  event_handler.rs  exchange.rs  exec.rs  lib.rs  logger.rs  main.rs  monitor.rs  order.rs  order_manager.rs  order_placement.rs  order_sync.rs  position_manager.rs  position_order_tests.rs  processor.rs  qmel.rs  qmel_tests.rs  quote_generator.rs  rate_limiter.rs  rate_limiter_tests.rs  risk.rs  risk_handler.rs  risk_manager.rs  strategy.rs  symbol_discovery.rs  symbol_processor.rs  trading_loop.rs  trend.rs  types.rs  utils.rs  (+1 more)
crates/backtest/: Cargo.toml
crates/backtest/src/: lib.rs
crates/bot_core/: Cargo.toml
crates/bot_core/src/: lib.rs
crates/data/: Cargo.toml
crates/data/src/: binance_rest.rs  binance_ws.rs  lib.rs
crates/exec/: Cargo.toml
crates/exec/src/: binance.rs  lib.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs
optimization/: ARCHITECTURE.md  README.md  __init__.py  __main__.py  backtest_runner.py  cli.py  config_manager.py  optimizer.py  parameter_space.py  result_analyzer.py
optimization/metrics/: __init__.py
optimization/strategies/: __init__.py
src/: ai_analyzer.rs  balance.rs  cache.rs  config.rs  connection.rs  event_bus.rs  event_loop.rs  follow_orders.rs  initialization.rs  lib.rs  logging.rs  main.rs  metrics.rs  metrics_cache.rs  order_analysis.rs  ordering.rs  portfolio_backtest.rs  position_manager.rs  qmel.rs  risk.rs  risk_manager.rs  slippage.rs  state.rs  storage.rs  symbol_scanner.rs  tasks.rs  test_utils.rs  trending.rs  trending_tasks.rs  types.rs  utils.rs  venue.rs  websocket.rs
src/connection/: mod.rs  rest.rs  venue.rs  websocket.rs
src/trending/: core.rs  mod.rs  multi_timeframe.rs  strategies.rs
src/types/: api.rs  connection.rs  core.rs  events.rs  mod.rs  state.rs
tests/: README.md  backtest.rs  compile_test.rs  connection_tests.rs  integration_tests.rs  optimize.rs  optimize_strategy.rs  position_and_pricing.rs  trending_success_test.rs
tests/helpers/: backtest_engine.rs  mod.rs  recorder.rs
