[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_urlencoded = "0.7"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
ta = "0.5"
dotenvy = "0.15"
rand = "0.8"
