[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
