#location: /crates/exec/Cargo.toml
[package]
name = "exec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bot_core = { path = "../bot_core" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
rust_decimal = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
rust_decimal_macros = "1"
