#location: /crates/strategy/Cargo.toml
[package]
name = "strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bot_core = { path = "../bot_core" }

[dev-dependencies]
rust_decimal_macros = "1"
